# cpp_template

./: .gitignore  CMakeLists.txt  readme.md
src/: main.cpp
